# ROS2-Robot-Navigation-AWS-Hospital

./: frames_2026-04-10_13.10.42.gv  frames_2026-04-10_14.14.31.gv  frames_2026-04-11_16.01.18.gv  frames_2026-04-14_23.01.54.gv  frames_2026-04-16_00.50.53.gv  omni_base.urdf  omni_base_sim.urdf  omni_base_simu.urdf
src/manual_navigation/manual_navigation/: square_controller.py
src/my_robot/: CMakeLists.txt  package.xml
src/my_robot/launch/: display.launch.py
src/my_robot/urdf/: frame.xacro  my_robot.urdf  my_robot_gazebo.urdf  omni_base.xacro  sensors.xacro  wheels.xacro
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: configuration.yaml  mapper_params_online_async.yaml  mecanum_nav_bt.xml  nav2_params.yaml
src/my_robot_bringup/launch/: navigation.launch.py  sim_bridge.launch.py
src/my_robot_bringup/maps/: map_final_hospital.pgm  map_final_hospital.yaml
src/my_robot_bringup/urdf/: omni_base_simu.urdf
src/my_robot_bringup/worlds/: hospital_aws.world  hospital_full.world
src/my_robot_gazebo/: package.xml  setup.cfg  setup.py
src/my_robot_gazebo/launch/: gazebo.launch.py  gazebo_w_robot.launch.py  robot_control.launch.py
src/omni_base_simulation/: package.xml  setup.cfg  setup.py
src/omni_base_simulation/launch/: sim.launch.py
src/omni_base_simulation/worlds/: empty.sdf
src/robot_omni/launch/: gazebo_control.launch.py
src/robot_omni/urdf/: omni_base.urdf
src/robot_web_ui/: package.xml  setup.py
src/robot_web_ui/config/: rooms.yaml
src/robot_web_ui/launch/: full_navigation.launch.py  slam_with_ui.launch.py  (+2 more)
(+16 files in other folders)
